--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,16 @@
 
 export(usktest)
 import(dplyr)
-import(plotly)
 import(purrr)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme_bw)
 importFrom(pkgcond,suppress_messages)
+importFrom(plotly,ggplotly)
+importFrom(plotly,layout)
 importFrom(stats,aov)
 importFrom(stats,qchisq)
