--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ importFrom(pkgcond,suppress_messages)
 importFrom(plotly,ggplotly)
 importFrom(plotly,layout)
 importFrom(stats,aov)
+importFrom(stats,as.formula)
 importFrom(stats,qchisq)
